# open-etl-ayni-krieg

./: .env.template  .gitignore  MIGRATION.md  README.md  SECURITY.md  SECURITY_SETUP.md  pyproject.toml  test_schedule_list.py
.github/: ENVIRONMENT_SETUP.md
.github/scripts/: validate_etl_configs.py
.github/workflows/: deploy-etl.yml  pr-checks.yml
etls/myfirstETL/: DOCKERFILE_NOTES.md  Dockerfile  README.md  pyproject.toml
etls/myfirstETL/resources/: config.yaml
etls/myfirstETL/src/: __init__.py  pipeline.py  transforms.py  utils.py
etls/myfirstETL/tests/: test_pipeline.py
etls/sinadef-analysis/: README.md  pyproject.toml
etls/sinadef-analysis/resources/: config.yaml
etls/sinadef-analysis/src/: pipeline.py  transforms.py  utils.py
etls/sinadef-analysis/tests/: test_pipeline.py
kubeflow/: __init__.py
kubeflow/pipelines/: __init__.py  base_pipeline.py
scripts/: build.py  deploy.py  list_etls.py
